[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "integra_mix"
authors = [{name = "Stefano"}]
requires-python = ">=3.11.6"
dynamic = ["dependencies","readme","version"]
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}

[tool.black]
line_length = 88