[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "integra_mix"
version = "0.1.0"
authors = [{name = "Stefano"}]
requires-python = ">=3.11.6"
dynamic = ["dependencies","readme"]
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}

[tool.black]
line_length = 88